Added assignment pages

--- a/a3.html
+++ b/a3.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8"><title>Assignment title3 - November 19, 2019</title>
+  <meta charset="utf-8"><title>Assignment 270313 - 8/19/19</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,7 +71,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="f1.html">Final Project</a>
+                            <a class="nav-link" href="final_project.html">Final Project</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn btn-primary btn-sm" href="index.html">Cover Page</a>
@@ -87,12 +87,9 @@
     
 <!-- blog single -->
 <section>
-    <div><h1 style="color:black;text-align:center;">title3 - November 19, 2019</h1>
-</div>
-<img src="images/project_1/sidd_1.png" alt="" class="center">
-<img src="images/project_1/sidd_1.png" alt="" class="center">
-<img src="images/project_1/sidd_1.png" alt="" class="center">
-<img src="images/project_1/sidd_1.png" alt="" class="center">
+    <div><h1 style="color:black;text-align:center;">270313 - 8/19/19</h1>
+	</div>
+<img src="images\assignment3\260313.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
@@ -108,7 +105,8 @@
 </p>
                 </div>
                 <div class="col-md-6">
-                    <p class="text-lg-right"></p>
+                    <p class="text-lg-right"><a href="a4.html" style="color:white;" class="fa fa-angle-right fa-5x"></a>
+</p>
                 </div>
             </div>
         </div>
