--- a/a11.html
+++ b/a11.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8"><title>Assignment 270113 - 8/19/19</title>
+  <meta charset="utf-8"><title>Assignment 271113 - ?/?/19</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,9 +87,8 @@
     
 <!-- blog single -->
 <section>
-    <div><h1 style="color:black;text-align:center;">270113 - 8/19/19</h1>
+    <div><h1 style="color:black;text-align:center;">271113 - ?/?/19</h1>
 	</div>
-<img src="images\assignment1\260113.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
@@ -101,10 +100,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-lg-left"></p>
+                    <p class="text-lg-left"><a href="a10.html" style="color:white;" class="fa fa-angle-left fa-5x"></a>
+</p>
                 </div>
                 <div class="col-md-6">
-                    <p class="text-lg-right"><a href="a2.html" style="color:white;" class="fa fa-angle-right fa-5x"></a>
+                    <p class="text-lg-right"><a href="a12.html" style="color:white;" class="fa fa-angle-right fa-5x"></a>
 </p>
                 </div>
             </div>
