Added  assignment pages

--- a/a15.html
+++ b/a15.html
@@ -50,6 +50,21 @@
     <a href="a13.html">13</a>
     <a href="a14.html">14</a>
     <a href="a15.html">15</a>
+<a href="a16.html">16</a>
+<a href="a17.html">17</a>
+<a href="a18.html">18</a>
+<a href="a19.html">19</a>
+<a href="a20.html">20</a>
+<a href="a21.html">21</a>
+<a href="a22.html">22</a>
+<a href="a23.html">23</a>
+<a href="a24.html">24</a>
+<a href="a25.html">25</a>
+<a href="a26.html">26</a>
+<a href="a27.html">27</a>
+<a href="a28.html">28</a>
+<a href="a29.html">29</a>
+<a href="a30.html">30</a>
 </div>
 
 <!-- preloader start -->
@@ -120,11 +135,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-lg-left"><a href="a14.html" style="color:white;" class="fa fa-angle-left fa-5x"></a>
+                    <p class="text-lg-left"><a href="a14.html" style="color:black;" class="fa fa-angle-left fa-5x"></a>
 </p>
                 </div>
                 <div class="col-md-6">
-                    <p class="text-lg-right"></p>
+                    <p class="text-lg-right"><a href="a16.html" style="color:black;" class="fa fa-angle-right fa-5x"></a>
+</p>
                 </div>
             </div>
         </div>
