--- a/a11.html
+++ b/a11.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8"><title>Assignment 271113 - ?/?/19</title>
+  <meta charset="utf-8"><title>Assignment 271113 - 9/4/19</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -120,8 +120,10 @@
     
 <!-- blog single -->
 <section>
-    <div><h1 style="color:black;text-align:center;">271113 - ?/?/19</h1>
+    <div><h1 style="color:black;text-align:center;">271113 - 9/4/19</h1>
 	</div>
+<img src="images\assignment11\271113_front.png" alt="" class="center">
+<img src="images\assignment11\271113_back.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
