--- a/a30.html
+++ b/a30.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8"><title>Assignment 273013 - ?/?/19</title>
+  <meta charset="utf-8"><title>Assignment 272913 - 9/30/19</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -120,7 +120,7 @@
     
 <!-- blog single -->
 <section>
-    <div><h1 style="color:black;text-align:center;">273013 - ?/?/19</h1>
+    <div><h1 style="color:black;text-align:center;">272913 - 9/30/19</h1>
 	</div>
 </section>
 <!-- /blog-single -->
@@ -137,7 +137,8 @@
 </p>
                 </div>
                 <div class="col-md-6">
-                    <p class="text-lg-right"></p>
+                    <p class="text-lg-right"><a href="a31.html" style="color:black;" class="fa fa-angle-right fa-5x"></a>
+</p>
                 </div>
             </div>
         </div>
