--- a/a31.html
+++ b/a31.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8"><title>Assignment 27LP0713 - 9/30/19</title>
+  <meta charset="utf-8"><title>Assignment 273013 - 10/2/19</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -120,10 +120,10 @@
     
 <!-- blog single -->
 <section>
-    <div><h1 style="color:black;text-align:center;">27LP0713 - 9/30/19</h1>
+    <div><h1 style="color:black;text-align:center;">273013 - 10/2/19</h1>
 	</div>
-<img src="images\LP07\27LP0713_front.png" alt="" class="center">
-<img src="images\LP07\27LP0713_back.png" alt="" class="center">
+<img src="images\assignment30\273013_front.png" alt="" class="center">
+<img src="images\assignment30\273013_back.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
@@ -135,12 +135,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-lg-left"><a href="a25.html" style="color:black;" class="fa fa-angle-left fa-5x"></a>
+                    <p class="text-lg-left"><a href="a30.html" style="color:black;" class="fa fa-angle-left fa-5x"></a>
 </p>
                 </div>
                 <div class="col-md-6">
-                    <p class="text-lg-right"><a href="a27.html" style="color:black;" class="fa fa-angle-right fa-5x"></a>
-</p>
+                    <p class="text-lg-right"></p>
                 </div>
             </div>
         </div>
