--- a/a25.html
+++ b/a25.html
@@ -137,7 +137,7 @@
 </p>
                 </div>
                 <div class="col-md-6">
-                    <p class="text-lg-right"><a href="a26.html" style="color:black;" class="fa fa-angle-right fa-5x"></a>
+                    <p class="text-lg-right"><a href="aLP07.html" style="color:black;" class="fa fa-angle-right fa-5x"></a>
 </p>
                 </div>
             </div>
