--- a/a26.html
+++ b/a26.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8"><title>Assignment 27LP0713 - 9/30/19</title>
+  <meta charset="utf-8"><title>Assignment 272613 - 9/30/19</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -120,10 +120,9 @@
     
 <!-- blog single -->
 <section>
-    <div><h1 style="color:black;text-align:center;">27LP0713 - 9/30/19</h1>
+    <div><h1 style="color:black;text-align:center;">272613 - 9/30/19</h1>
 	</div>
-<img src="images\LP07\27LP0713_front.png" alt="" class="center">
-<img src="images\LP07\27LP0713_back.png" alt="" class="center">
+<img src="images\assignment26\272613.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
@@ -135,7 +134,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-lg-left"><a href="a25.html" style="color:black;" class="fa fa-angle-left fa-5x"></a>
+                    <p class="text-lg-left"><a href="aLP07.html" style="color:black;" class="fa fa-angle-left fa-5x"></a>
 </p>
                 </div>
                 <div class="col-md-6">
