--- a/a6.html
+++ b/a6.html
@@ -35,11 +35,13 @@
  <!-- Side navigation -->
 <div class="sidenav">
   <a><h5>All Assignments</h5></a>
+<a href="aLP01.html">LP01</a>
   <a href="a1.html">1</a>
   <a href="a2.html">2</a>
   <a href="a3.html">3</a>
   <a href="a4.html">4</a>
     <a href="a5.html">5</a>
+<a href="aLP02.html">LP02</a>
     <a href="a6.html">6</a>
     <a href="a7.html">7</a>
     <a href="a8.html">8</a>
@@ -50,13 +52,16 @@
     <a href="a13.html">13</a>
     <a href="a14.html">14</a>
     <a href="a15.html">15</a>
+<a href="aLP04.html">LP04</a>
 <a href="a16.html">16</a>
 <a href="a17.html">17</a>
 <a href="a18.html">18</a>
+<a href="aLP05.html">LP05</a>
 <a href="a19.html">19</a>
 <a href="a20.html">20</a>
 <a href="a21.html">21</a>
 <a href="a22.html">22</a>
+<a href="aLP06.html">LP06</a>
 <a href="a23.html">23</a>
 <a href="a24.html">24</a>
 <a href="a25.html">25</a>
@@ -97,7 +102,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link btn" href="a1.html">Assignments</a>
+                            <a class="nav-link btn" href="aLP01.html">Assignments</a>
                         </li>
                         
                         <li class="nav-item">
@@ -135,7 +140,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-lg-left"><a href="a5.html" style="color:black;" class="fa fa-angle-left fa-5x"></a>
+                    <p class="text-lg-left"><a href="aLP02.html" style="color:black;" class="fa fa-angle-left fa-5x"></a>
 </p>
                 </div>
                 <div class="col-md-6">
