--- a/aLP06.html
+++ b/aLP06.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8"><title>Assignment 271513 - 9/8/19</title>
+  <meta charset="utf-8"><title>Assignment 27LP0612 - 9/23/19</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -126,10 +126,10 @@
     
 <!-- blog single -->
 <section>
-    <div><h1 style="color:black;text-align:center;">271513 - 9/8/19</h1>
+    <div><h1 style="color:black;text-align:center;">27LP0612 - 9/23/19</h1>
 	</div>
-<img src="images\assignment15\271513_front.png" alt="" class="center">
-<img src="images\assignment15\271513_back.png" alt="" class="center">
+<img src="images\LP06\27LP0613_front.png" alt="" class="center">
+<img src="images\LP06\27LP0613_back.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
@@ -141,11 +141,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-lg-left"><a href="a14.html" style="color:black;" class="fa fa-angle-left fa-5x"></a>
+                    <p class="text-lg-left"><a href="a22.html" style="color:black;" class="fa fa-angle-left fa-5x"></a>
 </p>
                 </div>
                 <div class="col-md-6">
-                    <p class="text-lg-right"><a href="aLP04.html" style="color:black;" class="fa fa-angle-right fa-5x"></a>
+                    <p class="text-lg-right"><a href="a23.html" style="color:black;" class="fa fa-angle-right fa-5x"></a>
 </p>
                 </div>
             </div>
