Added Missing Assignments

--- a/a29.html
+++ b/a29.html
@@ -128,6 +128,7 @@
 <section>
     <div><h1 style="color:black;text-align:center;">272913 - 9/30/19</h1>
 	</div>
+<img src="images\assignment29\272913.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
