--- a/a22.html
+++ b/a22.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8"><title>Assignment 272213 - ?/?/19</title>
+  <meta charset="utf-8"><title>Assignment 272213 - 9/18/19</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -126,8 +126,10 @@
     
 <!-- blog single -->
 <section>
-    <div><h1 style="color:black;text-align:center;">272213 - ?/?/19</h1>
+    <div><h1 style="color:black;text-align:center;">272213 - 9/18/19</h1>
 	</div>
+<img src="images\assignment22\272213_front.png" alt="" class="center">
+<img src="images\assignment22\272213_back.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
