--- a/a25.html
+++ b/a25.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8"><title>Assignment 272513 - ?/?/19</title>
+  <meta charset="utf-8"><title>Assignment 272513 - 9/25/19</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -126,8 +126,10 @@
     
 <!-- blog single -->
 <section>
-    <div><h1 style="color:black;text-align:center;">272513 - ?/?/19</h1>
+    <div><h1 style="color:black;text-align:center;">272513 - 9/25/19</h1>
 	</div>
+<img src="images\assignment25\272513_front.png" alt="" class="center">
+<img src="images\assignment25\272513_back.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
