Added Quizes and General Info

--- a/information.html
+++ b/information.html
@@ -90,7 +90,15 @@
     <div>
         <h1 style="color:black;text-align:center;">General Information</h1>
 </div>
-<img src="images/general_information/1.png" alt="" class="center">
+    <img src="images/general_information/general_info 2.png" alt="" class="center">
+    <img src="images/general_information/general_info 3.png" alt="" class="center">
+    <img src="images/general_information/general_info 4.png" alt="" class="center">
+    <img src="images/general_information/general_info 5.png" alt="" class="center">
+    <img src="images/general_information/general_info 6.png" alt="" class="center">
+    <img src="images/general_information/general_info 7.png" alt="" class="center">
+    <img src="images/general_information/general_info 8.png" alt="" class="center">
+    <img src="images/general_information/general_info 9.png" alt="" class="center">
+
     
     
     <!-- COPY THE ABOVE LINE AND TAKE PICTURES OF YOUR SYLLABUS AND STUFF -->
