--- a/a28.html
+++ b/a28.html
@@ -128,6 +128,7 @@
 <section>
     <div><h1 style="color:black;text-align:center;">272813 - 9/30/19</h1>
 	</div>
+<img src="images\assignment28\272813.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
