Updated Assignment nagivation

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link btn" href="a1.html">Assignments</a>
+                            <a class="nav-link btn" href="aLP01.html">Assignments</a>
                         </li>
                         
                         <li class="nav-item">
