--- a/information.html
+++ b/information.html
@@ -71,7 +71,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link btn" href="f1.html">Final Project</a>
+                            <a class="nav-link btn" href="final_project.html">Final Project</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn btn-primary btn-sm" href="index.html">Cover Page</a>
