--- a/a17.html
+++ b/a17.html
@@ -128,7 +128,7 @@
 <section>
     <div><h1 style="color:black;text-align:center;">271713 - 9/13/19</h1>
 	</div>
-<img src="images\assignment17\271713.gif" alt="" class="center">
+<img src="images\assignment17\271713.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
