--- a/final_project.html
+++ b/final_project.html
@@ -63,7 +63,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link btn" href="aLP01.html">Assignments</a>
+                            <a class="nav-link btn" href="LP.html">Laboratory Preparation</a>
                         </li>
                         
                         <li class="nav-item">
