--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                         <li class="nav-item">
                             <a class="nav-link btn" href="information.html">Information</a>
                         </li>
-                        
                         <li class="nav-item">
-                            <a class="nav-link btn" href="aLP01.html">Assignments</a>
+                            <a class="nav-link btn" href="Assignments.html">Assignments</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link btn" href="LP.html">Laboratory Preparation</a>
                         </li>
                         
                         <li class="nav-item">
