Added Final Project

--- a/Assignments.html
+++ b/Assignments.html
@@ -408,17 +408,21 @@
     <div><h2 style="color:black;text-align:center;">CGT 163 - Siddharth Nathella<br><br><br></h2>
 	</div>	
 
-	<div><h2 style="color:black;text-align:center;">275513 - Wednesday Lecture Assignment - Week 14</h2>
-	</div>
-<img src="images/assignment55/275513_front.png" alt="" class="center">
-<img src="images/assignment55/275513_back.png" alt="" class="center">
-    <div><h2 style="color:black;text-align:center;">CGT 163 - Siddharth Nathella<br><br><br></h2>
-	</div>	
-
 
 <div><h2 style="color:black;text-align:center;">Final Project</h2>
 	</div>
-<img src="images/assignment53/275313.png" alt="" class="center">
+<img src="images/finalproject/27FP13.png" alt="" class="center">
+    <img src="images/finalproject/27FP1301.png" alt="" class="center">
+    <img src="images/finalproject/27FP1302.png" alt="" class="center">
+    <img src="images/finalproject/27FP1303.png" alt="" class="center">
+    <img src="images/finalproject/27FP1305.png" alt="" class="center">
+    <img src="images/finalproject/27FP1304.png" alt="" class="center">
+    <img src="images/finalproject/27FP1306.png" alt="" class="center">
+    <img src="images/finalproject/27FP1307.png" alt="" class="center">
+    <img src="images/finalproject/27FP1308.png" alt="" class="center">
+    <img src="images/finalproject/27FP1309.png" alt="" class="center">
+    <img src="images/finalproject/27FP1310.jpg" alt="" class="center">
+        <img src="images/finalproject/27FP13.gif" alt="" class="center">
     <div><h2 style="color:black;text-align:center;">CGT 163 - Siddharth Nathella<br><br><br></h2>
 	</div>	
 
