--- a/final_project.html
+++ b/final_project.html
@@ -61,7 +61,9 @@
                         <li class="nav-item">
                             <a class="nav-link btn" href="information.html">Information</a>
                         </li>
-                        
+                        <li class="nav-item">
+                            <a class="nav-link btn" href="Assignments.html">Assignments</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link btn" href="LP.html">Laboratory Preparation</a>
                         </li>
@@ -88,9 +90,34 @@
 <!-- blog single -->
 <section>
     <div>
-        <h2 style="color:black;text-align:center;">CGT 163 Final Project</h2>
+        <h1 style="color:black;text-align:center;">CGT 163 Final Project : Electric Guitar</h1>
 </div>
-<h2 style="text-align:center;"><br><br><br><br>Coming Soon</h2>
+    <div><h2 style="color:black;text-align:center;">27FP13 - Assembly</h2></div>
+<img src="images/finalproject/27FP13.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1301 - Body</h2></div>
+    <img src="images/finalproject/27FP1301.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1302 - Neck</h2></div>
+    <img src="images/finalproject/27FP1302.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1303 - Headstock</h2></div>
+    <img src="images/finalproject/27FP1303.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1304 - Bushing</h2></div>
+    <img src="images/finalproject/27FP1304.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1305 - Tuning Peg</h2></div>
+    <img src="images/finalproject/27FP1305.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1306 - Retainer</h2></div>
+    <img src="images/finalproject/27FP1306.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1307 - Bridge</h2></div>
+    <img src="images/finalproject/27FP1307.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1308 - Jack</h2></div>
+    <img src="images/finalproject/27FP1308.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1309 - Pickguard</h2></div>
+    <img src="images/finalproject/27FP1309.png" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP1310 - Bridge Drawing</h2></div>
+    <img src="images/finalproject/27FP1310.jpg" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">27FP13 - Assembly DMU Fitting</h2></div>
+    <img src="images/finalproject/27FP13.gif" alt="" class="center">
+    <div><h2 style="color:black;text-align:center;">CGT 163 - Siddharth Nathella<br><br><br></h2>
+	</div>	
 </section>
 <!-- /blog-single -->
 
