--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <br>
         <h3 style="color:black;text-align:center;">Siddharth Nathella</h3>
 </div>
-<img src="images/cover_photo/cover_photo.png" alt="" class="center">
+<img src="images/coverpage.gif" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
