--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <h3 style="color:black;text-align:center;">Siddharth Nathella</h3>
 </div>
 <img src="images/coverpage.gif" alt="" class="center">
+<img src="images/finalproject/27FP13.png" alt="" class="center">
 </section>
 <!-- /blog-single -->
 
