--- a/Assignments.html
+++ b/Assignments.html
@@ -62,7 +62,7 @@
                             <a class="nav-link btn" href="information.html">Information</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" href="Assignment.html">Assignments</a>
+                            <a class="nav-link btn" href="Assignments.html">Assignments</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn" href="LP.html">Laboratory Preparation</a>
